--- a/TensAI_Office_Addon/src/commands/commands.html
+++ b/TensAI_Office_Addon/src/commands/commands.html
@@ -7,12 +7,16 @@
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
 </head>
 <body>
-    <script>
-        // This file is required for the Office Add-in commands to work
-        // It doesn't need any content as the actual functionality is in the taskpane
-        Office.onReady(() => {
-            console.log('TensAI Commands loaded');
-        });
-    </script>
+    <div id="content-header">
+        <div class="ms-bgColor-neutralLighter ms-fontColor-neutralPrimary">
+            <div class="ms-font-su ms-fontWeight-light ms-fontColor-neutralPrimary">TensAI Commands</div>
+        </div>
+    </div>
+    <div id="content-main">
+        <div class="ms-bgColor-neutralLighter ms-fontColor-neutralPrimary">
+            <div class="ms-font-l ms-fontColor-neutralPrimary">Commands loaded successfully!</div>
+        </div>
+    </div>
+    <script src="commands.js"></script>
 </body>
 </html>
