--- a/TensAI_Browser_Extension/src/popup/popup.html
+++ b/TensAI_Browser_Extension/src/popup/popup.html
@@ -14,9 +14,13 @@
                 <img src="../../assets/icons/icon-32.png" alt="TensAI" class="logo-img">
                 <h1>TensAI</h1>
             </div>
-            <div class="status-indicator" id="status-indicator">
-                <span class="status-dot"></span>
-                <span class="status-text">Ready</span>
+            <div style="display:flex; align-items:center; gap:10px;">
+                <div class="status-indicator" id="status-indicator">
+                    <span class="status-dot"></span>
+                    <span class="status-text">Ready</span>
+                </div>
+                <button class="secondary-btn" id="login-btn" style="padding:6px 10px;">Login</button>
+                <button class="secondary-btn" id="logout-btn" style="padding:6px 10px; display:none;">Logout</button>
             </div>
         </div>
 
