feat(addin-auth): add Login/Logout UI and simple dialog flow to AuthService

--- a/TensAI_Office_Addon/src/taskpane/taskpane.html
+++ b/TensAI_Office_Addon/src/taskpane/taskpane.html
@@ -25,6 +25,12 @@
                     <p class="subtitle">AI-powered productivity tools</p>
                 </div>
 
+                <div class="mb-3 d-flex align-items-center gap-2">
+                    <button id="btnLogin" class="btn btn-outline-primary btn-sm">Login</button>
+                    <button id="btnLogout" class="btn btn-outline-secondary btn-sm" style="display:none;">Logout</button>
+                    <span id="authStatus" class="ms-auto text-muted" style="font-size: 12px;">Signed out</span>
+                </div>
+
                 <!-- Office App Info -->
                 <div id="office-info" class="office-info" style="display: none;">
                     <div class="alert alert-info">
